# sba-solver-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  TASKS.md  package.json  playwright.config.ts
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
apex-solver-fork/: .gitignore  .rust_rules.mdc  Cargo.toml  README.md
apex-solver-fork/.github/workflows/: ci.yml
apex-solver-fork/benches/: README.md  solver_comparison.rs
apex-solver-fork/benches/cpp_comparison/: CMakeLists.txt  README.md  SETUP.md  ceres_benchmark.cpp  g2o_benchmark.cpp  gtsam_benchmark.cpp
apex-solver-fork/benches/cpp_comparison/common/include/: benchmark_utils.h  read_g2o.h  unified_cost.h
apex-solver-fork/benches/cpp_comparison/common/src/: read_g2o.cpp  unified_cost.cpp
apex-solver-fork/examples/: compare_optimizers.rs  covariance_estimation.rs  load_graph_file.rs  loss_function_comparison.rs  profile_datasets.rs  profile_linalg.rs  visualize_graph_file.rs  visualize_optimization.rs
apex-solver-fork/src/: error.rs  lib.rs  logger.rs
apex-solver-fork/src/core/: corrector.rs  loss_functions.rs  mod.rs  problem.rs  residual_block.rs  variable.rs
apex-solver-fork/src/factors/: between_factor.rs  double_sphere_factor.rs  eucm_factor.rs  fov_factor.rs  kannala_brandt_factor.rs  mod.rs  prior_factor.rs  rad_tan_factor.rs  ucm_factor.rs
apex-solver-fork/src/io/: g2o.rs  mod.rs  toro.rs
apex-solver-fork/src/linalg/: cholesky.rs  mod.rs  qr.rs
apex-solver-fork/src/manifold/: mod.rs  rn.rs  se2.rs  se3.rs  so2.rs  so3.rs
apex-solver-fork/src/observers/: conversions.rs  mod.rs  visualization.rs
apex-solver-fork/src/optimizer/: dog_leg.rs  gauss_newton.rs  levenberg_marquardt.rs  mod.rs
apex-solver-fork/tests/: integration_tests.rs
examples/: index.html
js/: pkg-extras.json  wrapper.js
scripts/: postbuild.js
src/: lib.rs
tests/: bundle-adjustment.spec.ts
