[package]
name = "apex-solver"
version = "0.1.6"
edition = "2024"
authors = ["Amin Abouee <amin.abouee@gmail.com>"]
description = "A high-performance Rust library for nonlinear least squares optimization with Lie group support, designed for SLAM, bundle adjustment, and pose graph optimization"
license = "Apache-2.0"
repository = "https://github.com/amin-abouee/apex-solver"
homepage = "https://github.com/amin-abouee/apex-solver"
documentation = "https://docs.rs/apex-solver"
readme = "README.md"
keywords = ["optimization", "slam", "computer-vision", "robotics", "nonlinear"]
categories = ["algorithms", "science", "mathematics"]
exclude = [
    "data_bk/*",
    "doc/*.md",
    "!doc/CHANGELOG.md",
    "profiles/*",
    "output/*",
    ".github/*",
    ".claude/*",
    ".rust_rules.mdc",
    "CLAUDE.md",
]

[[bin]]
name = "optimize_3d_graph"
path = "bin/optimize_3d_graph.rs"
required-features = ["cli"]

[[bin]]
name = "optimize_2d_graph"
path = "bin/optimize_2d_graph.rs"
required-features = ["cli"]

[[example]]
name = "visualize_graph_file"
required-features = ["visualization"]

[[example]]
name = "visualize_optimization"
required-features = ["visualization"]

[features]
default = ["io", "parallel", "cli", "logging"]
# File I/O support (G2O, TORO formats)
io = ["dep:memmap2"]
# Parallel processing with rayon
parallel = ["dep:rayon"]
# CLI tools
cli = ["dep:clap", "dep:colored", "dep:num_cpus", "io", "logging"]
# Logging with timestamps
logging = ["dep:chrono", "dep:tracing-subscriber"]
# Visualization with rerun
visualization = ["dep:rerun"]

[dependencies]
thiserror = "2.0.17"
nalgebra = { version = "0.33", features = ["convert-glam029"] }
rand = "0.9.2"
faer = { version = "0.22", features = ["sparse"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# WASM-compatible time (drop-in replacement for std::time)
web-time = "1.1"

# Optional dependencies
memmap2 = { version = "0.9", optional = true }
rayon = { version = "1.11", optional = true }
rerun = { version = "0.26.2", features = ["sdk"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true }
colored = { version = "2.1", optional = true }
num_cpus = { version = "1.16", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
factrs = "0.2.0"
tiny-solver = "0.17"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "solver_comparison"
harness = false

[profile.dev]
split-debuginfo = "unpacked"
debug = 1

[profile.test]
split-debuginfo = "unpacked"
debug = 1

[profile.profiling]
inherits = "release"
debug = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
